...
                        style={styles.anonymizationButton}
                      />
                    )}

                    <CustomButton
                      testID="logout-button"
                      title="Logout"
                      variant="outline"
                      onPress={onLogout}
                      style={styles.logoutButton}
                    />
                  </View>
                </>
...
